--- a/Album.html
+++ b/Album.html
@@ -9,7 +9,7 @@
     <table border="0"width="90%" bgcolor="#F8F8FF" cellpadding="10" align="center">
         <tr align="center">
             <h2><marquee>⋆. 𐙚 ̊SELAMAT DATANG⋆. 𐙚 ̊ 𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°WELCOME𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖⋆. 𐙚 ̊SELAMAT DATANG⋆. 𐙚 ̊ 𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°WELCOME𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°⋆. 𐙚 ̊SELAMAT DATANG⋆. 𐙚 ̊ 𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°WELCOME𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°</marquee></h2>
-           <td width="200px"><a href="index.HTML">✮⋆˙ 🏠︎✮⋆˙ Beranda</a></td>
+           <td width="200px"><a href="index.html">✮⋆˙ 🏠︎✮⋆˙ Beranda</a></td>
            <td width="200px"><a href="profil.html">༉‧₊˚.👤༉‧₊˚. Profil</a></td>
            <td width="200px"><a href="Artikel.html">✎ᝰ. Artikel</a></td>
            <td width="200px"><a href="Album.html">˖°[ ◉¯]˖° Album</a></td>
@@ -24,12 +24,12 @@
                 </tr> 
                 <tr>
                     <table border="1" width="50%" cellpadding="5" cellspacing="5" align="center">
-                    <td><a href="fotoku.html"><center>fotoku</center><img src="image/aku/fotoku 1a.jpg" width="300px"></a></td>
+                    <td><a href="fotoku.html"><center>fotoku</center><img src="image/aku/fotoku 1a.jpg" width="310px"></a></td>
                     <td><a href="temanku.html"><center>temanku</center><img src="image/teman/teman 2.jpeg" width="300px"></a></td>
                     
                 </tr>
                 <tr>
-                     <td><a href="kegiatanku.html"><center>kegiatanku</center><img src="image/kegiatan/kegiatan 1a.jpeg" width="300px"></a></td>
+                     <td><a href="kegiatanku.html"><center>kegiatanku</center><img src="image/kegiatan/kegiatan 1a.jpeg" width="320px"></a></td>
                      <td><a href="tari.html"><center>tari</center><img src="image/tari/tari 1.jpeg" width="300px"></a></td>
                 </tr>
                     </table>
