--- a/Artikel.html
+++ b/Artikel.html
@@ -9,7 +9,7 @@
     <table border="0"width="90%" bgcolor="#F8F8FF" cellpadding="10" align="center">
         <tr align="center">
             <h2><marquee>⋆. 𐙚 ̊SELAMAT DATANG⋆. 𐙚 ̊ 𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°WELCOME𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖⋆. 𐙚 ̊SELAMAT DATANG⋆. 𐙚 ̊ 𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°WELCOME𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°⋆. 𐙚 ̊SELAMAT DATANG⋆. 𐙚 ̊ 𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°WELCOME𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°</marquee></h2>
-           <td width="200px"><a href="index.HTML">✮⋆˙ 🏠︎✮⋆˙ Beranda</a></td>
+           <td width="200px"><a href="index.html">✮⋆˙ 🏠︎✮⋆˙ Beranda</a></td>
            <td width="200px"><a href="profil.html">༉‧₊˚.👤༉‧₊˚. Profil</a></td>
            <td width="200px"><a href="Artikel.html">✎ᝰ. Artikel</a></td>
            <td width="200px"><a href="Album.html">˖°[ ◉¯]˖° Album</a></td>
@@ -21,16 +21,16 @@
                <table border="0" width="60%" bgcolor="#F8F8FF" cellpadding="8" cellspacing="0" align="center">
                 <tr>
                     <td><img src="image/random/music.jpg" width="100%"></td>
-                    <td>♫₊˚.🎧 ✩｡<br>Mendengarkan musik menjadi bagian dari keseharian banyak orang, termasuk aku. Musik bukan hanya hiburan, tapi juga dapat menenangkan di tengah kesibukan atau rasa penat. Ketika suasana hati sedang tidak menentu, mendengarkan lagu favorit bisa seketika mengubah mood. Genre yang aku sukai cukup beragam mulai dari pop, akustik, hingga instrumental. Saya percaya bahwa setiap lagu punya cerita dan emosi tersendiri yang bisa menyentuh pendengarnya dengan cara yang berbeda. Itulah mengapa aku merasa mendengarkan musik bukan hanya hobi, tapi kebutuhan emosional yang menyegarkan pikiran dan jiwa.</td>
+                    <td><h1>Mendengarkan musik ♫₊˚.🎧 ✩｡</h1><br>Mendengarkan musik menjadi bagian dari keseharian banyak orang, termasuk aku. Musik bukan hanya hiburan, tapi juga dapat menenangkan di tengah kesibukan atau rasa penat. Ketika suasana hati sedang tidak menentu, mendengarkan lagu favorit bisa seketika mengubah mood. Genre yang aku sukai cukup beragam mulai dari pop, akustik, hingga instrumental. Saya percaya bahwa setiap lagu punya cerita dan emosi tersendiri yang bisa menyentuh pendengarnya dengan cara yang berbeda. Itulah mengapa aku merasa mendengarkan musik bukan hanya hobi, tapi kebutuhan emosional yang menyegarkan pikiran dan jiwa.</td>
                 </tr>
                 <tr>
                     <td><img src="image/random/pemandangan.jpg" width="100%"></td>
-                    <td>⋆｡°•☁️<br>Memotret pemandangan adalah cara menikmati dan mengabadikan keindahan alam. Melalui kamera, aku bisa menangkap momen-momen indah seperti langit senja, kabut pagi, atau pantulan cahaya di air yang sering terlewatkan begitu saja.
+                    <td><h1>Memotret pemandangan ⋆｡°•☁️</h1><br>Memotret pemandangan adalah cara menikmati dan mengabadikan keindahan alam. Melalui kamera, aku bisa menangkap momen-momen indah seperti langit senja, kabut pagi, atau pantulan cahaya di air yang sering terlewatkan begitu saja.
 Menurut aku, kegiatan ini melatih kesabaran dan kepekaan dalam melihat detail. Memotret bukan hanya soal gambar, tapi juga caraku mengekspresikan perasaan tanpa kata-kata. Karena itu, hobi ini terasa sangat bermakna dan menyenangkan.</td>
                 </tr>
                 <tr>
                     <td><img src="image/random/pantai.jpg"width="100%"></td></td>
-                    <td>🪼⋆.ೃ࿔*:･<br>Angin sepoi-sepoi, deburan ombak, serta aroma laut selalu berhasil membuat pikiranku rileks dan beban terasa lebih ringan. Duduk di pinggir pantai sambil memandang cakrawala atau berjalan menyusuri pasir hangat adalah momen yang aku nikmati sepenuhnya. Bagi aku, pantai bukan hanya tempat berlibur, tapi juga tempat untuk menenangkan diri dan mengisi ulang semangat.</td>
+                    <td><h1>Pantai🪼⋆.ೃ࿔*:･</h1><br>Angin sepoi-sepoi, deburan ombak, serta aroma laut selalu berhasil membuat pikiranku rileks dan beban terasa lebih ringan. Duduk di pinggir pantai sambil memandang cakrawala atau berjalan menyusuri pasir hangat adalah momen yang aku nikmati sepenuhnya. Bagi aku, pantai bukan hanya tempat berlibur, tapi juga tempat untuk menenangkan diri dan mengisi ulang semangat.</td>
                 </tr>
                 </table>
                 <table border="0" width="90$" cellpadding="10" cellspacing="10" align="center">
