--- a/kegiatanku.html
+++ b/kegiatanku.html
@@ -1,4 +1,21 @@
 <!DOCTYPE html>
+<html lang="en"
+<head>
+    <meta charset="UTF-8">
+    <title>My Personal Website</title>
+</head>
+<body bgcolor="#ffe6f0" text="#004d66" link="#0066cc" alink="#993366" vlink="#ff6699">
+    <h1><CENTER><font color="#cc6699" face="Comic Sana MS">𐙚 Halaman Album 𐙚 </font></CENTER></h1>
+    <table border="0"width="90%" bgcolor="#F8F8FF" cellpadding="10" align="center">
+        <tr align="center">
+            <h2><marquee>⋆. 𐙚 ̊SELAMAT DATANG⋆. 𐙚 ̊ 𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°WELCOME𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖⋆. 𐙚 ̊SELAMAT DATANG⋆. 𐙚 ̊ 𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°WELCOME𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°⋆. 𐙚 ̊SELAMAT DATANG⋆. 𐙚 ̊ 𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°WELCOME𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°</marquee></h2>
+           <td width="200px"><a href="index.html">✮⋆˙ 🏠︎✮⋆˙ Beranda</a></td>
+           <td width="200px"><a href="profil.html">༉‧₊˚.👤༉‧₊˚. Profil</a></td>
+           <td width="200px"><a href="Artikel.html">✎ᝰ. Artikel</a></td>
+           <td width="200px"><a href="Album.html">˖°[ ◉¯]˖° Album</a></td>
+           <td width="200px"><a href="Bukutamu.html">⋆🗒˚˖° Buku Tamu</a></td>
+        </tr>
+        <table border="0" width="90%" bgcolor="#F8F8FF" cellpadding="10" align="center"></table>
 <html>
     <head>
         <title>fotoku</title>
@@ -37,3 +54,9 @@
                 <td align="center"><a href="kegiatanku9.html">kegiatanku 9</a></td>
             </tr>
         </center>
+    </table>
+        <tr>
+            <td align="center"><a href="Album.html">Kembali</a></td>
+        </tr>
+        </body>
+</html>
