--- a/profil.html
+++ b/profil.html
@@ -18,18 +18,18 @@
         <table border="0" width="90%" bgcolor="#F8F8FF" cellpadding="10" align="center">
             <tr align="center">
         <h2><marquee>✦•┈๑⋅⋯⋯⋅๑┈•✦PROFIL✦•┈๑⋅⋯⋯⋅๑┈•✦PROFIL✦•┈๑⋅⋯⋯⋅๑┈•✦PROFIL✦•┈๑⋅⋯⋯⋅๑┈•✦PROFIL✦•┈๑⋅⋯⋯⋅๑┈•✦PROFIL✦•┈๑⋅⋯⋯⋅๑┈•✦PROFIL✦•┈๑⋅⋯⋯⋅๑┈•✦PROFIL✦•┈๑⋅⋯⋯⋅๑┈•✦PROFIL✦•┈๑⋅⋯⋯⋅๑┈•</marquee></h2>
-               <table border="0" width="60%" bgcolor="#ffe6f0" cellpadding="8" cellspacing="0" align="center">
+               <table border="0" width="40%" bgcolor="#ffe6f0" cellpadding="5" cellspacing="0" align="center">
                 <td><h1>halloooo semuaaaa...</h1><P>Selamat datang di halaman profil aku. Menu ini aku buat sebagai ruang kecil untuk memperkenalkan diri lebih dekat.</P>
                 </tr>        
                 <tr align="center">
-            <td colspan="5"><img src="image/aku/foto profil.jpeg"></td>
+            <td colspan="5"><a href="image/aku/foto profil.jpeg"><img src="image/aku/foto profil.jpeg" width="250px"></a></td>
                 </tr>
                 <tr><td><b>Nama:</b></td><td>Refa Aditya Purnamasari.</td></tr>
                 <tr><td><b>Tempat,Tanggal lahir:</b></td><td>Bantul, 9 Juli 2009.</td></tr>
                 <tr><td><b>Alamat:</b></td><td>Munggur RT 03, Srimartani, Piyungan, Bantul.</td></tr>
-                <tr><td><b>No.HP:</b></td><td>0882-2896-3186</td></tr>
-                <tr><td><b>Instagram:</b></td><td>@rdtysii</td></tr>
-                <tr><td><b>Tiktok:</b></td><td>@rfadtyaa</td></tr>
+                <tr><td><b>No.HP:</b></td><td><a href="https://wa.me/qr/THS6YYCX44OTB1" target="_blank">+62 882-2896-3186</a></td></tr>
+                <tr><td><b>Instagram:</b></td><td><a href="https://www.instagram.com/rdtysii?igsh=N2p5Nnh4MzczZGVy" target="_blank">@rdtysii</a></td></tr>
+                <tr><td><b>Tiktok:</b></td><td><a href="https://www.tiktok.com/@rfadtyaa?_r=1&_t=ZS-91sRuXuUBOR" target="_blank">@rfadtyaa</a></td></tr>
             </td>
                 </table>
            <table border="0" width="90$" cellpadding="10" cellspacing="10" align="center">
