--- a/terimakasih.html
+++ b/terimakasih.html
@@ -12,3 +12,6 @@
                 <tr align="center">
                     <td>⊹ ࣪ ˖Terimakasih telah mengunjungi website aku⊹ ࣪ ˖</td>
                 </tr>
+                <tr>
+                    <td align="center"><a href="index.HTML">Kembali</a></td>
+                </tr>
