--- a/Bukutamu.html
+++ b/Bukutamu.html
@@ -9,7 +9,7 @@
     <table border="0"width="90%" bgcolor="#e0f7fa" cellpadding="10" align="center">
         <tr align="center">
             <h2><marquee>⋆. 𐙚 ̊SELAMAT DATANG⋆. 𐙚 ̊ 𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°WELCOME𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°</marquee></h2>
-           <td width="200px"><a href="index.HTML">✮⋆˙ 🏠︎✮⋆˙ Beranda</a></td>
+           <td width="200px"><a href="index.html">✮⋆˙ 🏠︎✮⋆˙ Beranda</a></td>
            <td width="200px"><a href="profil.html">༉‧₊˚.👤༉‧₊˚. Profil</a></td>
            <td width="200px"><a href="Artikel.html">✎ᝰ. Artikel</a></td>
            <td width="200px"><a href="Album.html">˖°[ ◉¯]˖° Album</a></td>
