--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <title>My Personal Website</title>
 </head>
 <body bgcolor="#ffe6f0" text="#004d66" link="#0066cc" alink="#993366" vlink="#ff6699">
-    <h1><CENTER><font color="#cc6699" face="Comic Sana MS">𐙚 Beranda𐙚 </font></CENTER></h1>
+    <h1><CENTER><font color="#cc6699" face="Comic Sana MS">𐙚 rfadtya web𐙚 </font></CENTER></h1>
     <table border="0"width="90%" bgcolor="#F8F8FF" cellpadding="10" align="center">
         <tr align="center">
             <h2><marquee>⋆. 𐙚 ̊SELAMAT DATANG⋆. 𐙚 ̊ 𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°WELCOME𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°</marquee></h2>
-           <td width="200px"><a href="index.HTML">✮⋆˙ 🏠︎✮⋆˙ Beranda</a></td>
+           <td width="200px"><a href="index.html">✮⋆˙ 🏠︎✮⋆˙ Beranda</a></td>
            <td width="200px"><a href="profil.html">༉‧₊˚.👤༉‧₊˚. Profil</a></td>
            <td width="200px"><a href="Artikel.html">✎ᝰ. Artikel</a></td>
            <td width="200px"><a href="Album.html">˖°[ ◉¯]˖° Album</a></td>
            <td width="200px"><a href="Bukutamu.html">⋆🗒˚˖° Buku Tamu</a></td>
         </tr>
         <tr>
-            <td><img src="image/random/d765cae5-3a1b-4d8b-b170-441ca6f5c132.jpg" width="100%"></td>
+            <td><a href="image/random/d765cae5-3a1b-4d8b-b170-441ca6f5c132.jpg"><img src="image/random/d765cae5-3a1b-4d8b-b170-441ca6f5c132.jpg" width="100%"></a></td>
             <td colspan="4"><h1>Selamat datang𓇼 ⋆.˚ 𓆉 𓆝 𓆡⋆.˚ 𓇼</h1><p>Selamat datang teman-teman di personal web aku,Aku senang teman-teman berkunjung di personal web aku.Website ini masih sangat sederhana karena ini murni html dan aku juga masih belajar membuat website. Website ini aku buat sebagai ruang kecil untuk menyimpan jejak-jejak perjalanan hidupku bersama orang yang aku sayangi. Aku bukan orang dengan banyak pencapaian, tapi aku percaya setiap langkah, sekecil apa pun, punya cerita yang layak untuk dikenang dan dibagikan. Terima kasih udah mampir, semoga kamu betah di sini. •ᴗ•</p>
                 <br>Personal web ini terdiri dari lima menu utama, yaitu:<br>
                 <ol>
