--- a/tari.html
+++ b/tari.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
+<html lang="en"
+<head>
+    <meta charset="UTF-8">
+    <title>My Personal Website</title>
+</head>
+<body bgcolor="#ffe6f0" text="#004d66" link="#0066cc" alink="#993366" vlink="#ff6699">
+    <h1><CENTER><font color="#cc6699" face="Comic Sana MS">𐙚 Halaman Album 𐙚 </font></CENTER></h1>
+    <table border="0"width="90%" bgcolor="#F8F8FF" cellpadding="10" align="center">
+        <tr align="center">
+            <h2><marquee>⋆. 𐙚 ̊SELAMAT DATANG⋆. 𐙚 ̊ 𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°WELCOME𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖⋆. 𐙚 ̊SELAMAT DATANG⋆. 𐙚 ̊ 𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°WELCOME𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°⋆. 𐙚 ̊SELAMAT DATANG⋆. 𐙚 ̊ 𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°WELCOME𓆉⋆｡˚⋆❀ 🐚🫧𓇼 ˖°</marquee></h2>
+           <td width="200px"><a href="index.html">✮⋆˙ 🏠︎✮⋆˙ Beranda</a></td>
+           <td width="200px"><a href="profil.html">༉‧₊˚.👤༉‧₊˚. Profil</a></td>
+           <td width="200px"><a href="Artikel.html">✎ᝰ. Artikel</a></td>
+           <td width="200px"><a href="Album.html">˖°[ ◉¯]˖° Album</a></td>
+           <td width="200px"><a href="Bukutamu.html">⋆🗒˚˖° Buku Tamu</a></td>
+        </tr>
+        <table border="0" width="90%" bgcolor="#F8F8FF" cellpadding="10" align="center"></table>
 <html>
     <head>
         <title>temanku</title>
     </head>
     <body>
         <center>
-        <table border="1" width="83%">
+        <table border="1" width="80%">
             <tr>
                 <td><img src="image/tari/tari 1.jpeg" width="200" height="300"></td>
                 <td><img src="image/tari/tari 2.jpeg" width="200" height="300"></td>
@@ -35,3 +52,9 @@
                 <td align="center"><a href="tari10.html">tari 10</a></td>
             </tr>
         </center>
+    </table>
+    <tr>
+        <td align="center"><a href="Album.html">Kembali</a></td>
+    </tr>
+    </body>
+</html>
