--- a/profil.html
+++ b/profil.html
@@ -34,7 +34,7 @@
                 </table>
            <table border="0" width="90$" cellpadding="10" cellspacing="10" align="center">
            <tr>
-           <td align="center"><a href="index.HTML">Kembali</a></td>
+           <td align="center"><a href="index.html">Kembali</a></td>
            <td align="center"><a href="Artikel.html">Selanjutnya</a></td>
            </tr>
            </table>
